--- a/src/pages/events.module.scss
+++ b/src/pages/events.module.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     background-color: $primary;
+    padding: 5vh 0;
+
 
     .event_year{
         display: flex;
