--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -29,6 +29,8 @@
         align-items: center;
         justify-content: center;
 
+        text-align: center;
+
         color: $text-light;
         z-index: 20;
 
