--- a/src/styles/components/eventcard.module.scss
+++ b/src/styles/components/eventcard.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .card {
     display: flex;
@@ -9,9 +9,9 @@
 
     p {
         font-size: 1rem;
-        color: $text-dark;
+        color: var(--text-dark);
         padding: 0.5vh 1vw;
-        background-image: linear-gradient($primary-dark, $primary-darker);
+        background-image: linear-gradient(var(--primary-dark), var(--primary-darker));
     }
 
 }
