--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -1,8 +1,8 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .footer_container{
     width: 100%;
-    background-image: linear-gradient($secondary-dark ,$secondary);
+    background-image: linear-gradient(var(--secondary-dark) ,var(--secondary));
     display: flex;
     flex-direction: column;
 
@@ -14,10 +14,10 @@
         justify-content: space-between;
         padding: 2vh 5vw;
 
-        color: $text-dark;
+        color: var(--text-dark);
 
         
-        @include mw{
+        @include mixins.mw{
             flex-direction: column;
             align-items: center;
             gap: 2vh;
@@ -29,7 +29,7 @@
             gap: 2vh;
             min-width: fit-content;
             
-            @include mw{
+            @include mixins.mw{
                 align-items: center;
             }
 
@@ -46,7 +46,7 @@
             flex-direction: column;
             gap: 2vh;
 
-            @include mw{
+            @include mixins.mw{
                 align-items: center;
             }
 
@@ -56,7 +56,7 @@
                 justify-content: space-between;
                 gap: 1.5vh;
 
-                @include mw{
+                @include mixins.mw{
                     align-items: center;
                 }
             }
@@ -73,7 +73,7 @@
 
 .a_link{
     text-decoration: none;
-    color: $text-dark;
+    color: var(--text-dark);
     font-size: 1rem;
 }
 
