--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .navbar_container {
     top: 0;
@@ -7,7 +7,7 @@
     z-index: 100;
     position: fixed;
 
-    height: $navbar-height;
+    height: var(--navbar-height);
     min-height: fit-content;
     position: fixed;
 
@@ -16,10 +16,10 @@
     justify-content: space-between;
     align-items: center;
 
-    background-image: linear-gradient($secondary, $secondary-dark);
+    background-image: linear-gradient(var(--secondary), var(--secondary-dark));
 
-    @include mw {
-        height: $navbar-height-mw;
+    @include mixins.mw {
+        height: var(--navbar-height-mw);
         flex-direction: column;
         justify-content: none;
         align-items:baseline;
@@ -32,7 +32,7 @@
         gap: 2.5vw;
         padding: 0 2.5vw;
 
-        @include mw{
+        @include mixins.mw{
             width: 100%;
             padding-top: 2vh;
         }
@@ -41,7 +41,7 @@
             width: 5vw;
             height: auto;
 
-            @include mw{
+            @include mixins.mw{
                 width: 7vw;
             }
         }
@@ -49,7 +49,7 @@
         .navbar_logo {
             font-size: 2rem;
             font-weight: bold;
-            color: $text-dark;
+            color: var(--text-dark);
             text-decoration: none;
         }
     }
@@ -66,7 +66,7 @@
             flex-direction: row;
             gap: 2.5vw;
         
-            @include mw{
+            @include mixins.mw{
                 width: 100%;
                 /*
                 position: absolute;
@@ -76,7 +76,7 @@
                 max-height: 0;
                 overflow: hidden;
         
-                background-color: $secondary;
+                background-color: var(--secondary;
                 flex-direction: column;
                 align-items: center;
                 transition: all 0.3s ease-in-out;
@@ -87,11 +87,11 @@
 
             .nav_link {
                 font-size: 1rem;
-                color: $text-dark;
+                color: var(--text-dark);
                 text-decoration: none;
                 text-align: center;
             
-                @include mw{
+                @include mixins.mw{
                     width: 100%;
                     padding: 2vw;
                     font-size: 1rem;
@@ -101,7 +101,7 @@
             .nav_link:hover {
                 transform: scale(1.05);
 
-                @include mw{
+                @include mixins.mw{
                     transform: none;
                 }
             }            
@@ -109,13 +109,13 @@
 
         .join_button {
             padding: 1vh 2vw;
-            background-color: $highlighter;
+            background-color: var(--highlighter);
             border: none;
             border-radius: 4vw;
             font-size: 1rem;
-            color: $text-light;
+            color: var(--text-light);
 
-            @include mw{
+            @include mixins.mw{
                 font-size: 0.8rem;
             }
         }
@@ -123,7 +123,7 @@
         .join_button:hover {
             transform: scale(1.05);
             
-            @include mw{
+            @include mixins.mw{
                 transform: none;
             }
         }
