--- a/src/styles/components/socials.module.scss
+++ b/src/styles/components/socials.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .socials{
     display: flex;
@@ -8,7 +8,7 @@
 
 .a_link{
     text-decoration: none;
-    color: $text-dark;
+    color: var(--text-dark);
     font-size: 1rem;
 }
 
@@ -20,7 +20,7 @@
 .logo{
     font-size: 2rem;
 
-    @include mw{
+    @include mixins.mw{
         font-size: 2rem;
     }
 }
