--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .page {
     width: 100%;
@@ -31,7 +31,7 @@
 
         text-align: center;
 
-        color: $text-light;
+        color: var(--text-light);
         z-index: 20;
 
         font-size: 2rem;
@@ -45,22 +45,22 @@
 .yellow_box, .white_box {
     display: flex;
     flex-direction: row;
-    background-color: $primary;
+    background-color: var(--primary);
 
-    @include mw {
+    @include mixins.mw {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
     .textbox {
-        color: $text-dark;
+        color: var(--text-dark);
         display: flex;
         flex-direction: column;
         padding: 10vh 0 10vh 10vw;
         width: 50vw;
 
-        @include mw {
+        @include mixins.mw {
             width: 90%;
             padding: 5vh 0 0 10%;
         }
@@ -84,7 +84,7 @@
         width: 100%;
         padding: 5vh 0;
 
-        @include mw {
+        @include mixins.mw {
             flex-direction:  row;
             justify-content: space-evenly;
         }
@@ -100,7 +100,7 @@
         transform: rotate(-10deg);
         z-index: 3;
 
-        @include mw {
+        @include mixins.mw {
             transform: none;
         }
     }
@@ -109,7 +109,7 @@
         transform: rotate(15deg);
         z-index: 1;
 
-        @include mw {
+        @include mixins.mw {
             transform: none;
         }
     }
@@ -117,16 +117,16 @@
 
 
 .yellow_box {
-    background-color: $secondary-light;
+    background-color: var(--secondary-light);
 }
 
 .math_box {
     display: flex;
     flex-direction: column;
-    background-color: $primary;
+    background-color: var(--primary);
 
     .textbox {
-        color: $text-dark;
+        color: var(--text-dark);
         display: flex;
         flex-direction: column;
         padding: 10vh 10vw 0 10vw;
@@ -153,7 +153,7 @@
 
         gap: 2vh;
 
-        @include mw {
+        @include mixins.mw {
             flex-direction: column;
         }
 
@@ -161,11 +161,11 @@
 
     button {
         padding: 1vh 2vw;
-        background-color: $highlighter;
+        background-color: var(--highlighter);
         border: none;
         border-radius: 4vw;
         font-size: 1rem;
-        color: $text-light;
+        color: var(--text-light);
         width: 50%;
 
         min-width: fit-content;
