--- a/src/styles/pages/our-team.module.scss
+++ b/src/styles/pages/our-team.module.scss
@@ -1,7 +1,7 @@
-@import '../styles/variables.scss';
+@use "../mixins.scss";
 
 .page {
-    background-color: $primary;
+    background-color: var(--primary);
     padding: 5vh 5%;
     display: flex;
     flex-direction: column;
@@ -20,17 +20,17 @@
         gap: 35px;
         justify-content: center;
 
-        @include mw{
+        @include mixins.mw{
             gap: 35px;
         }
         .card {
             width:30%;
             aspect-ratio: 1;
-            background-image: linear-gradient($secondary-light, $secondary);
+            background-image: linear-gradient(var(--secondary-light), var(--secondary));
             display: flex;
             flex-direction: column;
     
-            @include mw{
+            @include mixins.mw{
                 width: 100%;
                 aspect-ratio: 1;
                 margin: 0;
@@ -44,7 +44,7 @@
                 height: auto;
                 padding: 5% 10%;
     
-                @include mw{
+                @include mixins.mw{
                     width: 90%;
                     padding: 5%;
                 }
@@ -53,7 +53,7 @@
             p {
                 padding: 2% 10%;
                 
-                @include mw{
+                @include mixins.mw{
                     padding: 0.5% 5%;
                 }
             }
@@ -74,7 +74,7 @@
             }
     
             
-            @include mw {
+            @include mixins.mw {
                 .names {
                     font-size: 2rem;
                 }
