--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -2,174 +2,152 @@
 
 .page {
     width: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
-.welcome_box {
+.welcome_img {
     position: relative;
-    display: inline-block;
+    width: 100%;
+    height: calc(100vh - var(--navbar));
 
-    .big_pic {
-        max-width: 100%;
-        height: auto;
-        display: block;
-    }    
-
-    .welcome_text {
-        position: absolute;
+    p {
+        padding: calc(0.5 * (100vh - var(--navbar))) 0px;
         
+        text-align: center;
+        font-size: 2rem;
+        font-weight: bold;
+
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: radial-gradient(circle, rgba(0,0,0,0.4) 63%,  rgba(0,0,0,0.39)37%);
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        text-align: center;
-
-        color: var(--text-light);
         z-index: 20;
-
-        font-size: 2rem;
-        font-weight: bold;
-    }
-
+    
+        background-image: radial-gradient(circle, rgba(0,0,0,0.4) 63%,  rgba(0,0,0,0.39)37%);
+        color: var(--text-light);
+    }    
 }
 
+.math_box, .math_box_mobile {
+    padding: calc(var(--edge) / 2) var(--edge);
 
-
-.yellow_box, .white_box {
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+
     background-color: var(--primary);
 
-    @include mixins.mw {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .textbox {
-        color: var(--text-dark);
+    > * {
+        height: 256px;
+        width: calc(0.4 * (100% - 2 * var(--edge)));
+        padding: 16px 16px;
+        border-radius: 32px;
+        
         display: flex;
         flex-direction: column;
-        padding: 10vh 0 10vh 10vw;
-        width: 50vw;
-
-        @include mixins.mw {
+        justify-content: center;
+        gap: 16px;
+        
+        color: var(--text-dark);
+        // border: 5px solid black;
+        
+        a, button {
             width: 90%;
-            padding: 5vh 0 0 10%;
+            align-self: center;
+            font-size: 1rem;
         }
 
         .title {
-            font-size: 3rem;
-            max-width: 50%;
+            font-size: 4rem;
         }
-
-        .description {
-            font-size: 1rem;
-            width: 70%;
-        }
-    }
-
-    .image_box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        padding: 5vh 0;
-
-        @include mixins.mw {
-            flex-direction:  row;
-            justify-content: space-evenly;
-        }
-
-    }
-
-    .first_pic, .second_pic {
-        width: 30%;
-        height: auto;
-    }
-
-    .first_pic {
-        transform: rotate(-10deg);
-        z-index: 3;
-
-        @include mixins.mw {
-            transform: none;
+        
+        .desc {
+            font-size: 1.25rem;
         }
     }
     
-    .second_pic {
-        transform: rotate(15deg);
-        z-index: 1;
+    .third2 {
+        padding-top: 0px;
+    }
+}
 
-        @include mixins.mw {
-            transform: none;
-        }
+.math_box_mobile {
+    display: none;
+}
+
+@include mixins.mobile {
+    .math_box {
+        display: none;
+    }
+
+    .math_box_mobile {
+        display: block;
+    }
+}
+
+.image_container {
+    aspect-ratio: 1.5;
+    position: relative;
+    margin: 16px 0px;
+
+    > * {
+        border-radius: 32px;
+        box-shadow: 0px 0px 15px var(--secondary);
+    }
+
+    > *:hover{
+        transform: scale(1.05);
     }
 }
 
 
-.yellow_box {
-    background-color: var(--secondary-light);
-}
+// .white_box {
+//     display: flex;
+//     flex-direction: row;
+//     background-color: var(--primary);
 
-.math_box {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--primary);
+//     @include mixins.mw {
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
 
-    .textbox {
-        color: var(--text-dark);
-        display: flex;
-        flex-direction: column;
-        padding: 10vh 10vw 0 10vw;
+//     .textbox {
+//         color: var(--text-dark);
+//         display: flex;
+//         flex-direction: column;
+//         padding: 10vh 0 10vh 10vw;
+//         width: 50vw;
 
-        .title {
-            font-size: 3rem;
-        }
+//         @include mixins.mw {
+//             width: 90%;
+//             padding: 5vh 0 0 10%;
+//         }
+//     }
 
-        .description {
-            font-size: 1rem;
-            width: 70%;
-        }
-    }
+//     .image_box {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//         width: 100%;
+//         padding: 5vh 0;
 
+//         @include mixins.mw {
+//             flex-direction:  row;
+//             justify-content: space-evenly;
+//         }
+//     }
 
-    .buttons{
-        display: flex;
-        flex-direction: row;
-        width: 80%;
-        padding: 5vh 10% 10vh 10%;
-        
-        justify-content: center;
-        align-items: center;
+// .math_box {
+//     display: flex;
+//     flex-direction: column;
+//     background-color: var(--primary);
 
-        gap: 2vh;
-
-        @include mixins.mw {
-            flex-direction: column;
-        }
-
-    }
-
-    button {
-        padding: 1vh 2vw;
-        background-color: var(--highlighter);
-        border: none;
-        border-radius: 4vw;
-        font-size: 1rem;
-        color: var(--text-light);
-        width: 50%;
-
-        min-width: fit-content;
-
-    }
-
-}
+//     .textbox {
+//         color: var(--text-dark);
+//         display: flex;
+//         flex-direction: column;
+//         padding: 10vh 10vw 0 10vw;
+//     }
+// }
