--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -1,132 +1,133 @@
 @use "../mixins.scss";
 
 .navbar_container {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 100;
-    position: fixed;
 
-    height: var(--navbar-height);
-    min-height: fit-content;
-    position: fixed;
+    height: var(--navbar);
+    padding: 0px var(--edge);
 
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
-    background-image: linear-gradient(var(--secondary), var(--secondary-dark));
-
-    @include mixins.mw {
-        height: var(--navbar-height-mw);
-        flex-direction: column;
-        justify-content: none;
-        align-items:baseline;
+    background: rgba(252,229,157, 0.8);    
+    > * {
+        height: calc(var(--navbar) - 4vh);
     }
 
-    .navbar_left_container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 2.5vw;
-        padding: 0 2.5vw;
+    // @include mixins.mobile {
+    //     height: var(--navbar-mobile);
+    //     flex-direction: column;
+    //     justify-content: none;
+    //     align-items:baseline;
+    // }
+}
 
-        @include mixins.mw{
-            width: 100%;
-            padding-top: 2vh;
-        }
+.navbar_left {
+    display: flex;
+    align-items: center;
+    gap: 16px;
 
-        .logo{
-            width: 5vw;
-            height: auto;
+    // @include mixins.mobile{
+    //     width: 100%;
+    //     padding-top: 2vh;
+    // }
 
-            @include mixins.mw{
-                width: 7vw;
-            }
-        }
+    .logo{
+        width: 2.5vw;
+        aspect-ratio: 1;
 
-        .navbar_logo {
-            font-size: 2rem;
-            font-weight: bold;
-            color: var(--text-dark);
-            text-decoration: none;
-        }
+        position: relative;
+        
+        border-radius: 100%;
+        box-shadow: 0 0 10px var(--highlighter);
+
+        // @include mixins.mobile{
+        //     width: 7vw;
+        // }
     }
 
-    .navbar_right_container {
+    p {
+        font-size: 2.5rem;
+        font-weight: bold;
+
+        >span {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+.navbar_right {
+    position: relative;
+    margin-right: calc(80px + 32px);
+
+    .links {
         display: flex;
         flex-direction: row;
-        align-items: center;
-        gap: 2.5vw;
-        padding: 0 2.5vw;
-
-        .navbar_links {
-            display: flex;
-            flex-direction: row;
-            gap: 2.5vw;
-        
-            @include mixins.mw{
-                width: 100%;
-                /*
-                position: absolute;
-                top: 100%;
-                left: 0;
-                height: fit-content;
-                max-height: 0;
-                overflow: hidden;
-        
-                background-color: var(--secondary;
-                flex-direction: column;
-                align-items: center;
-                transition: all 0.3s ease-in-out;
-        
-                gap: 0;
-                */
-            }
-
-            .nav_link {
-                font-size: 1rem;
-                color: var(--text-dark);
-                text-decoration: none;
-                text-align: center;
-            
-                @include mixins.mw{
-                    width: 100%;
-                    padding: 2vw;
-                    font-size: 1rem;
-                }
-            }
-            
-            .nav_link:hover {
-                transform: scale(1.05);
-
-                @include mixins.mw{
-                    transform: none;
-                }
-            }            
-        }
-
-        .join_button {
-            padding: 1vh 2vw;
-            background-color: var(--highlighter);
-            border: none;
-            border-radius: 4vw;
-            font-size: 1rem;
-            color: var(--text-light);
-
-            @include mixins.mw{
-                font-size: 0.8rem;
-            }
-        }
-        
-        .join_button:hover {
-            transform: scale(1.05);
-            
-            @include mixins.mw{
-                transform: none;
-            }
-        }
+        gap: 32px;
+        height: 100%;
+        align-items: flex-end;
     }
     
+    .join_button {
+        position: absolute;
+        width: 80px;
+        left: calc(100% + 32px);
+        bottom: 0;
+
+        text-wrap: nowrap;
+    }
+
+        // @include mixins.mobile{
+        //     width: 100%;
+            /*
+            position: absolute;
+            top: 100%;
+            left: 0;
+            height: fit-content;
+            max-height: 0;
+            overflow: hidden;
+    
+            background-color: var(--secondary;
+            flex-direction: column;
+            align-items: center;
+            transition: all 0.3s ease-in-out;
+    
+            gap: 0;
+            */
+        // }
+
+        .link {
+            font-size: 1rem;
+            color: var(--text-dark);
+            text-decoration: none;
+            text-wrap: nowrap;
+        
+            // @include mixins.mobile{
+            //     width: 100%;
+            //     padding: 2vw;
+            //     font-size: 1rem;
+            // }
+        }
+        
+        .link:hover {
+            transform: scale(1.05);
+
+            // @include mixins.mobile{
+            //     transform: none;
+            // }
+        }      
 }
+
+
+// @include mixins.tablet {
+
+// }
+
+// @include mixins.mobile {
+
+// }
