--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -2,81 +2,18 @@
 
 .footer_container{
     width: 100%;
-    background-image: linear-gradient(var(--secondary-dark) ,var(--secondary));
+    padding: 16px;
+
     display: flex;
     flex-direction: column;
-
-    position: absolute;
+    align-items: center;
+    gap: 16px;
     
-    .footer{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 2vh 5vw;
+    background: var(--primary);
+    border-top: 1px solid var(--secondary);
+    box-shadow: 0 0 8px var(--secondary);
 
-        color: var(--text-dark);
-
-        
-        @include mixins.mw{
-            flex-direction: column;
-            align-items: center;
-            gap: 2vh;
-        }
-
-        .footer_left{
-            display: flex;
-            flex-direction: column;
-            gap: 2vh;
-            min-width: fit-content;
-            
-            @include mixins.mw{
-                align-items: center;
-            }
-
-            p{
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-
-        }
-
-        
-        .footer_middle, .footer_right{
-            display: flex;
-            flex-direction: column;
-            gap: 2vh;
-
-            @include mixins.mw{
-                align-items: center;
-            }
-
-            .links{
-                display: flex;
-                flex-direction: column ;
-                justify-content: space-between;
-                gap: 1.5vh;
-
-                @include mixins.mw{
-                    align-items: center;
-                }
-            }
-
-            p{
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-            
-        }
-
+    p {
+        font-size: 1rem;
     }
-}
-
-.a_link{
-    text-decoration: none;
-    color: var(--text-dark);
-    font-size: 1rem;
-}
-
-.a_link:hover{
-    text-decoration: underline;
 }
