--- a/src/styles/components/socials.module.scss
+++ b/src/styles/components/socials.module.scss
@@ -3,24 +3,14 @@
 .socials{
     display: flex;
     flex-direction: row;
-    gap: 2vw;
-}
+    gap: 32px;
 
-.a_link{
-    text-decoration: none;
-    color: var(--text-dark);
-    font-size: 1rem;
-}
-
-.a_link:hover{
-    text-decoration: underline;
-}
-
-
-.logo{
-    font-size: 2rem;
-
-    @include mixins.mw{
-        font-size: 2rem;
+    a >* {
+        font-size: 2.5rem;
     }
+
+    a >*:hover{
+        transform: scale(1.05);
+    }
+    
 }
