--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -10,7 +10,7 @@
     height: 100vh;
 
     p {
-        padding: calc(0.5 * (100vh - var(--navbar))) 0px;
+        padding-top: calc(0.65 * (100vh - var(--navbar)));
         
         text-align: center;
         font-size: 2rem;
