added text color on footer

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,9 +10,9 @@
   // --secondary: #f9cc3f;
   // --secondary-dark: #f0b702;
   // --secondary-light: #f7d15c;
-  --highlighter:#141a2b ;
+  --highlighter:#131b34 ;
   --text-light: #fffff0 ;
-  --text-dark: #141a2b;
+  --text-dark: #131b34;
 
   --navbar: 10vh;
 
