--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
 
-    background: rgba(252,229,157, 0.8);    
+    background: rgba(247,209,92,0.8);    
     > * {
         height: calc(var(--navbar) - 4vh);
     }
