new events page and restored teams page

--- a/src/styles/pages/our-team.module.scss
+++ b/src/styles/pages/our-team.module.scss
@@ -20,7 +20,7 @@
         gap: 35px;
         justify-content: center;
 
-        @include mixins.mw{
+        @include mixins.mobile{
             gap: 35px;
         }
         .card {
@@ -30,7 +30,7 @@
             display: flex;
             flex-direction: column;
     
-            @include mixins.mw{
+            @include mixins.mobile{
                 width: 100%;
                 aspect-ratio: 1;
                 margin: 0;
@@ -44,7 +44,7 @@
                 height: auto;
                 padding: 5% 10%;
     
-                @include mixins.mw{
+                @include mixins.mobile{
                     width: 90%;
                     padding: 5%;
                 }
@@ -53,7 +53,7 @@
             p {
                 padding: 2% 10%;
                 
-                @include mixins.mw{
+                @include mixins.mobile{
                     padding: 0.5% 5%;
                 }
             }
@@ -74,7 +74,7 @@
             }
     
             
-            @include mixins.mw {
+            @include mixins.mobile {
                 .names {
                     font-size: 2rem;
                 }
