--- a/src/styles/components/eventcard.module.scss
+++ b/src/styles/components/eventcard.module.scss
@@ -2,7 +2,8 @@
 
 .card {
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
+    padding-top: 16px;
 
     text-align: center;
     height: 100%;
@@ -13,5 +14,37 @@
         padding: 0.5vh 1vw;
         background-image: linear-gradient(var(--primary-dark), var(--primary-darker));
     }
+}
 
+.quarter {
+    width: 30%;
+    position: relative;
+    padding: 8px;
+    padding-top: 24px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+
+    border-radius: 16px;
+
+    background-color: var(--secondary);
+
+    h3 {
+        width: 90%;
+        position: absolute;
+        top: -20px;
+        padding: 8px 16px;
+
+        border-radius: 4vw;
+        border: none;  
+      
+        background-color: var(--highlighter);
+        color: var(--text-light);
+    }
+}
+
+.event {
+    padding: 8px 0px;
 }
