--- a/src/styles/pages/events.module.scss
+++ b/src/styles/pages/events.module.scss
@@ -1,50 +1,107 @@
 @use "../mixins.scss";
 
 .page {
+    background-color: var(--primary);
+    padding: var(--edge);
+    padding-top: 15vh;
+    text-align: center;
+
     display: flex;
     flex-direction: column;
-    background-color: var(--primary);
-    padding: 5vh 0;
+    gap: calc(var(--edge) / 2);
+}
+
+.details_section {
+    padding: 16px 32px;
+
+    display: flex;
+    justify-content: space-evenly;
+
+    background-color: var(--secondary);
+    border-radius: 16px;
+
+    .divider {
+        width: 1px;
+        background-color: var(--text-dark);
+    }
+}
+
+.divider {
+    width: 90%;
+    height: 1px;
+    align-self: center;
+    background-color: var(--text-dark);
+}
+
+.detail {
+    width: 48%;
+    padding: 0px 10%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 16px;
+
+    font-size: 3rem;
+
+    p {
+        font-size: 1rem;
+    }
+}
+
+.year{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.9rem;
+    }
+}
 
 
-    .event_year{
+
+.event_year{
+    display: flex;
+    flex-direction: column;
+
+    .year{
+        color: var(--text-dark);
+        font-size: 3.5rem;
+        font-weight: bold;
+
+        text-align: center;
+        margin-top: 2%;
+    }
+
+    .quarter_time{
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: var(--text-dark);
+        text-align: center;
+    }
+
+    .quarters {
         display: flex;
         flex-direction: column;
+        gap: 5%;
+        margin: 5%;
 
-        .year{
-            color: var(--text-dark);
-            font-size: 3.5rem;
-            font-weight: bold;
+        .qtr_titles, .qtr {                
+            display: grid;
+            grid-template-columns: repeat(3,minmax(0,1fr));
+            gap: 2%;
 
-            text-align: center;
-            margin-top: 2%;
-        }
-
-        .quarter_time{
-            font-size: 1.5rem;
-            font-weight: 400;
-            color: var(--text-dark);
-            text-align: center;
-        }
-
-        .quarters {
-            display: flex;
-            flex-direction: column;
-            gap: 5%;
-            margin: 5%;
-
-            .qtr_titles, .qtr {                
-                display: grid;
-                grid-template-columns: repeat(3,minmax(0,1fr));
-                gap: 2%;
-
-                .quarter_title {
-                    font-size: 1.5rem;
-                    font-weight: bold;
-                    color: var(--text-dark);
-                    background-image: linear-gradient(var(--secondary), var(--secondary-dark));
-                    text-align: center;
-                }
+            .quarter_title {
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: var(--text-dark);
+                background-image: linear-gradient(var(--secondary), var(--secondary-dark));
+                text-align: center;
             }
         }
     }
