--- a/src/styles/components/eventcard.module.scss
+++ b/src/styles/components/eventcard.module.scss
@@ -2,7 +2,7 @@
 
 .card {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding-top: 16px;
 
     text-align: center;
