--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,12 +15,15 @@
   --text-dark: #131b34;
 
   --navbar: 10vh;
+  --edge: 64px;
 
-  @include mixins.tablet{
-    --navbar: 12vh;
+  @include mixins.sm-laptop{
+    --edge: 32px;
   }
 
-  --edge: 64px;
+  @include mixins.tablet{
+    --navbar: 15vh;
+  }
 }
 
 * {
