--- a/src/styles/components/eventcard.module.scss
+++ b/src/styles/components/eventcard.module.scss
@@ -17,7 +17,7 @@
 }
 
 .quarter {
-    width: 30%;
+    width: 32%;
     position: relative;
     padding: 8px;
     padding-top: 24px;
@@ -47,4 +47,12 @@
 
 .event {
     padding: 8px 0px;
+}
+
+@include mixins.sm-laptop {
+    .quarter {
+        p {
+            font-size: 0.9rem;
+        }
+    }
 }
