--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -14,4 +14,8 @@
         font-size: 1rem;
         color: var(--text-dark);
     }
+    
+    @include mixins.tablet {
+        flex-direction: column;
+    }
 }
