--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -9,213 +9,99 @@
 
     height: var(--navbar);
     padding: 0px var(--edge);
+    overflow: hidden;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 32px;
 
     background: rgba(247,209,92,0.8);    
     > * {
-        height: calc(var(--navbar) - 4vh);
+        height: 8vh;
     }
 }
 
-.navbar_left {
+.logo{
+    height: 8vh;
+    aspect-ratio: 1;
+
+    position: relative;
+    margin-top: 1vh;
+    
+    border-radius: 100%;
+    box-shadow: 0 0 10px var(--highlighter);
+}
+
+.content {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.clubname {
+    width: fit-content;
+    
+    font-size: 2.5rem;
+    font-weight: bold;
+
+    >span {
+        font-size: 1.5rem;
+    }
+}
+
+.links {
+    display: flex;
+    gap: 32px;
     align-items: center;
-    gap: 16px;
-    position: relative;
-
-    .logo{
-        width: 5vh;
-        aspect-ratio: 1;
-
-        position: relative;
-        
-        border-radius: 100%;
-        box-shadow: 0 0 10px var(--highlighter);
-
-        // @include mixins.mobile{
-        //     width: 7vw;
-        // }
-    }
-
-    p {
-        position: absolute;
-        left: calc(2.5vw + 32px);
-        bottom: 0;
-
-        width: fit-content;
-        text-wrap: nowrap;
-
-        font-size: 2.1rem;
-        font-weight: bold;
-
-        >span {
-            font-size: 1.3rem;
-        }
-    }
 }
 
-.navbar_right {
-    position: relative;
-    margin-right: calc(80px + 32px);
-
-    .links {
-        display: flex;
-        flex-direction: row;
-        gap: 32px;
-        height: 100%;
-        align-items: flex-end;
-    }
-    
-    .join_button {
-        position: absolute;
-        width: 80px;
-        left: calc(100% + 32px);
-        bottom: 0;
-
-        text-wrap: nowrap;
-    }
-
-        // @include mixins.mobile{
-        //     width: 100%;
-            /*
-            position: absolute;
-            top: 100%;
-            left: 0;
-            height: fit-content;
-            max-height: 0;
-            overflow: hidden;
-    
-            background-color: var(--secondary;
-            flex-direction: column;
-            align-items: center;
-            transition: all 0.3s ease-in-out;
-    
-            gap: 0;
-            */
-        // }
-
-        .link {
-            font-size: 1rem;
-            color: var(--text-dark);
-            text-decoration: none;
-            text-wrap: nowrap;
-        
-            // @include mixins.mobile{
-            //     width: 100%;
-            //     padding: 2vw;
-            //     font-size: 1rem;
-            // }
-        }
-        
-        .link:hover {
-            transform: scale(1.05);
-
-            // @include mixins.mobile{
-            //     transform: none;
-            // }
-        }      
+.join_button > button {
+    width: 100px;
 }
 
+.link {
+    font-size: 1rem;
+    color: var(--text-dark);
+    text-decoration: none;
+}
+
+.link:hover {
+    transform: scale(1.05);
+}      
 
 @include mixins.sm-laptop {
-    .navbar_container > * {
-        height: calc(var(--navbar) - 5vh);
-    }
-
-    .navbar_left {
-        p {
-            font-size: 1.5rem;
-            >span {
-                font-size: 0.8rem;
-            }
-        }
+    .navbar_container, .links {
+        gap: 20px;
     }
 }
 
 @include mixins.tablet {
-    // .navbar_container > * {
-    //     height: calc(var(--navbar) - 5vh);
-    // }
-
-    .navbar_container {
+    .content {
         flex-direction: column;
-        align-items: normal;
+        align-items: flex-start;
+        position: relative;
+        padding-right: 120px;
     }
 
-    .navbar_left {
-        gap: 16px;
-        p {
+    .clubname {
+        font-size: 2rem;
+        > span {
             font-size: 1.5rem;
-            >span {
-                font-size: 0.8rem;
-            }
         }
     }
-    
-    .navbar_right {
-        margin-right: 0px;
-        width: 100%;
-        .links {
-            gap: 8px;
-            width: 100%;
-        }
-        .join_button {
-            left: calc(100% - var(--edge) - 80px);
-            right: var(--edge);
-            bottom: 7.5vh;
-        }
-    }
-}
 
-@include mixins.mobile {
+    .join_button {
+        position: absolute;
+        padding: calc((var(--navbar) - 16px - 1.2rem)/2)  0px;
+        right: 0;
+        top: 0;
+    }
+
     .navbar_container {
-        flex-direction: column;
-                //     height: var(--navbar-mobile);
-        //     flex-direction: column;
-        //     justify-content: none;
-        //     align-items:baseline;
+        gap: 32px;
     }
 
-    .navbar_left {
-                //     width: 100%;
-        //     padding-top: 2vh;
-    }
-
-    .navbar_right {
-                    // @include mixins.mobile{
-            //     width: 100%;
-                /*
-                position: absolute;
-                top: 100%;
-                left: 0;
-                height: fit-content;
-                max-height: 0;
-                overflow: hidden;
-        
-                background-color: var(--secondary;
-                flex-direction: column;
-                align-items: center;
-                transition: all 0.3s ease-in-out;
-        
-                gap: 0;
-                */
-            // }
-    }
-
-    .link {
-        // @include mixins.mobile{
-                //     width: 100%;
-                //     padding: 2vw;
-                //     font-size: 1rem;
-                // }
-    }
-
-    .link:hover {
-        // @include mixins.mobile{
-                //     transform: none;
-                // }
+    .links {
+        gap: 56px;
     }
 }
