--- a/src/styles/pages/team.module.scss
+++ b/src/styles/pages/team.module.scss
@@ -28,34 +28,8 @@
     border-radius: 15px;
     background-color: var(--secondary);
 
-    // @include mixins.mobile{
-    //     width: 100%;
-    //     aspect-ratio: 1;
-    //     margin: 0;
-    //     gap: 0;
-    // }
-    
-    // @include mixins.mobile {
-    //     .names {
-    //         font-size: 2rem;
-    //     }
-
-    //     .positions {
-    //         font-size: 1.7rem;
-    //         font-style: italic;
-    //     }
-
-    //     .intro{
-    //         font-size: 1.3rem;
-    //         padding-bottom: 5%;
-    //     }
-    // }
-
     p, h2 {
-        padding-top: 8px;  
-        // @include mixins.mobile{
-        //     padding: 0.5% 5%;
-        // }
+        padding-top: 8px;
     }
 }
 
@@ -64,4 +38,19 @@
     width: 100%;
     height: 250px;
     overflow: hidden;
+}
+
+@include mixins.sm-laptop {
+    .card {
+        width: 200px;
+        h2 {
+            font-size: 1.25rem;
+        }
+        p {
+            font-size: 0.8rem;
+        }
+    }
+    .photo {
+        height: 180px;
+    }
 }
