--- a/src/styles/pages/team.module.scss
+++ b/src/styles/pages/team.module.scss
@@ -36,8 +36,18 @@
 .photo {
     position: relative;
     width: 100%;
-    height: 250px;
+    height: 250px; /* This can be adjusted as needed */
     overflow: hidden;
+
+    img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* This ensures the image covers the container without stretching */
+        object-position: center; /* Center the image in the container */
+    }
 }
 
 @include mixins.sm-laptop {
